--- a/cockpit/Dockerfile
+++ b/cockpit/Dockerfile
@@ -1,5 +1,10 @@
 FROM ubuntu:15.10
+MAINTAINER LinFan "linfan.china@gmail.com"
+
+# Ports
 EXPOSE 9090
+
+# Install cockpit
 RUN apt-get install -y software-properties-common && \
     add-apt-repository -syu ppa:jpsutton/cockpit && \
     apt-get update && \
