add docker metadate plugin

--- a/fluentd_es/Dockerfile
+++ b/fluentd_es/Dockerfile
@@ -7,12 +7,13 @@ USER root
 # Fluentd plugins
 RUN gem install fluent-plugin-elasticsearch --no-rdoc --no-ri
 RUN gem install fluent-plugin-record-reformer --no-rdoc --no-ri
+RUN gem install fluent-plugin-docker_metadata_filter --no-rdoc --no-ri
 
 # Put init scripts
 ADD run.sh /run.sh
 ADD setup_plugin.sh /setup_plugin.sh
-RUN chmod 755 /*.sh
+RUN chmod +x /*.sh
 
 # Override entrypoint
-ENTRYPOINT ["/run.sh"]
+ENTRYPOINT ["sh", "/run.sh"]
 CMD ["-v"]
