--- a/fluentd_es/fluent.conf
+++ b/fluentd_es/fluent.conf
@@ -6,6 +6,15 @@
   tag docker.*
   format json
 </source>
+<filter docker.**>
+  type docker_metadata
+</filter>
+<filter docker.**>
+  type record_transformer
+  <record>
+    hostname ${hostname}
+  </record>
+</filter>
 <match docker.var.lib.docker.containers.*.*.log>
   type record_reformer
   container_id ${tag_parts[5]}
