put cmd into script

--- a/etcd/Dockerfile
+++ b/etcd/Dockerfile
@@ -10,12 +10,5 @@ RUN curl -sSLO https://github.com/coreos/etcd/releases/download/$VERSION/etcd-$V
 VOLUME ["/data"]
 EXPOSE 2379 2380
 
-CMD ["/bin/etcd", "--data-dir=/data", \
-    "--listen-peer-urls=http://0.0.0.0:2380", \
-    "--listen-client-urls=http://0.0.0.0:2379", \
-    "--advertise-client-urls=http://0.0.0.0:2379", \
-    "--name", "default", \
-    "--initial-advertise-peer-urls", "http://172.17.0.3:2380", \
-    "--initial-cluster", "default=http://172.17.0.3:2380", \
-    "--initial-cluster-token", "etcd-cluster", \
-    "--initial-cluster-state", "new"]
+ADD run.sh /bin/
+CMD ["sh", "/bin/run.sh"]
