--- a/sonar-scanner/2.8/Dockerfile
+++ b/sonar-scanner/2.8/Dockerfile
@@ -1,10 +1,10 @@
-FROM java:alpine
+FROM openjdk:alpine
 ENV SONAR_SCANNER_VERSION 2.8
 
-RUN apk add --no-cache wget && \
-        wget https://sonarsource.bintray.com/Distribution/sonar-scanner-cli/sonar-scanner-${SONAR_SCANNER_VERSION}.zip && \
-        unzip sonar-scanner-${SONAR_SCANNER_VERSION} && \
-        cd /usr/bin && ln -s /sonar-scanner-${SONAR_SCANNER_VERSION}/bin/sonar-scanner sonar-scanner && \
-        apk del wget
+RUN apk add --no-cache curl && \
+        curl -sSLO https://sonarsource.bintray.com/Distribution/sonar-scanner-cli/sonar-scanner-${SONAR_SCANNER_VERSION}.zip && \
+        unzip -d /usr/local/ sonar-scanner-${SONAR_SCANNER_VERSION} && \
+        ln -s /usr/local/sonar-scanner-${SONAR_SCANNER_VERSION}/bin/sonar-scanner /usr/bin/sonar-scanner
 
+WORKDIR /work
 CMD sonar-scanner
